# chass

./: CMakeLists.txt  README.md
include/: FENParser.h  advancer.h  analyzer.h  backtracker.h  enums.h  exceptions.h  extraInfo.h  helper.h  matchers.h  meeterInTheMiddle.h  move.h  piece.h  pieceCounts.h  position.h  positionChain.h  progressReporter.h  requiredMoveMaps.h  retractor.h  searcher.h  square.h  squareInfo.h  validator.h
src/: CMakeLists.txt  FENParser.cpp  advancer.cpp  analyzer.cpp  backtracker.cpp  helper.cpp  main.cpp  matchers.cpp  meeterInTheMiddle.cpp  move.cpp  piece.cpp  position.cpp  positionChain.cpp  progressReporter.cpp  retractor.cpp  searcher.cpp  square.cpp  validator.cpp
test/: CMakeLists.txt  games.cpp  problems.cpp
test/data/: games.pgn  problems.txt
